# SuperNNova

./: .gitignore  .pre-commit-config.yaml  .pre-commit-db.json  .python-version  .readthedocs.yml  .travis.yml  LICENSE.md  Makefile  README.md  README_elasticc  aws_elasticc_data_train.sh  aws_elasticc_data_train_PHOTFLAG_detections.sh  aws_elasticc_data_train_TRIGGER_0_100.sh  aws_elasticc_train_smalltimewindow.sh  changelog_DESbranch  changelog_paper_to_new_branch  cnn_metrics.py  compare_fink_runs.py  conda_env.yml  conda_gpu_env.yml  extra_metrics.py  planning_for_onthefly.py  pyproject.toml  readthedocs.yml  run.py  run_cnn.py  run_fink_candidates_onthefly.py  run_onthefly.py  run_onthefly_elasticc.py  run_paper.py  run_tests.sh  run_yml.py  setup.py  todo.md
.github/workflows/: bump.sh  bump.yml  docker_test.yml  publish.yml  pull_request.yml
Fink_Rubin_alerts/: README.md
ci/: ci.sh  train.sh
cli/: run.py
conda/: conda_env_cpu_osx-64.txt
configs_yml/: classify.yml  default.yml  simple.yml
docker/: Dockerfile.cpu  Dockerfile.gpu  entry_script.sh  zshrc
docs/: .gitignore  Makefile  conf.py  index.rst  notes_for_developers.md  requirements.txt
docs/configuration/: experiment_settings.rst  index.rst
docs/data/: dataset.rst  index.rst
docs/installation/: FAQ.rst  env.rst  five_minute_guide.rst  five_minute_guide_module.rst  onthefly.rst  python.rst  system.rst
docs/paper/: index.rst  paper.rst
docs/training/: index.rst  train.rst
docs/validation/: index.rst  validate.rst
docs/visualization/: index.rst  visualize.rst
env/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu10.old  Makefile  build-image.sh  conda_env.yml  conda_env_cpu_linux64.txt  conda_env_cpu_linux64.yml  conda_env_cpu_linux64_py37.txt  conda_env_cpu_macos.yml  conda_env_cpu_osx-64.txt  conda_env_gpu_linux64.txt  conda_env_gpu_linux64_2023.txt  conda_gpu_env.yml  entry_script.sh  launch_docker.py  verify_cuda_support.py  zshrc
env/archive/: conda_env_cpu_linux64.txt
python/supernnova/: __init__.py  conf.py
sandbox/: data.py  data_tests_fits_to_csv.py  example_run_modular_snn.py  lm_rnn_gal.py  mnist.py  rnn_mnist.py
scripts/SNPCC_data/: conf_anais.yml  constants.py  data.py  plots.py  pred_only.py  rnn.py
scripts/arxiv_1901/: cof.yml  conf.yml  constants.py  data.py  data_tests_fits_to_csv.py  plots.py  pred_only.py  randomforest.py  randomforest.yml  rnn.py  run.py
scripts/bayesian_rnn/: README.md  data.py  lm_rnn_fortunato.py
scripts/mc_dropout/: README.md  data.py  lm_rnn_gal.py
scripts/mnist/: mnist.py  rnn_mnist.py
scripts/peak/: conf.yml  conf_mask.yml  conf_scale_peak.yml  conf_scale_peak_dropout.yml  conf_scale_peak_random.yml  conf_scale_peak_random_dropout.yml  conf_test.yml  constants.py  data.py  plots.py  rnn.py  train_and_val.py
scripts/peak_thib/: conf.yml  conf_big.yml  conf_local.yml  conf_random.yml  conf_single.yml  conf_single_2.yml  conf_test.yml  data.py  plots.py  rnn.py  rnn_debug.py
supernnova/: __init__.py  conf.py
supernnova/data/: dataset.py  make_dataset.py  make_dataset_plasticc.py
supernnova/modules/: bayesian_layers.py  bayesian_rnn.py  peak_rnn.py  vanilla_rnn.py  variational_rnn.py
supernnova/paper/: superNNova_metrics.py  superNNova_plots.py  superNNova_thread.py
supernnova/training/: bayesian_rnn.py  bayesian_rnn_2.py  train_rnn.py  vanilla_cnn.py  vanilla_rnn.py
supernnova/utils/: data_utils.py  (+5 more)
tests/: test_00_data.py  test_data.py  test_load_pandas_from_fit.py  test_multidim_fits.py  test_rf.py  test_rnn.py  test_sntypes_resolution.py  test_tag_type.py  test_utils.py  test_visualization.py
(+59 files in other folders)
